line break in facebook notes and contact messages fixes #179

--- a/frontend/app/contact/contact.component.scss
+++ b/frontend/app/contact/contact.component.scss
@@ -4,10 +4,12 @@
 
 .contact-card-success {
   background-color: #dff0d8;
+  white-space: pre-line;
 }
 
 .contact-card-error {
   background-color: #f2dede;
+  white-space: pre-line;
 
   .md-card {
     display: flex;
